syntax = "proto3";

package topos.tce.v1;

import "topos/shared/v1/uuid.proto";

service ConsoleService {
  rpc PushPeerList(PushPeerListRequest) returns (PushPeerListResponse);
}

message PushPeerListRequest {
  topos.shared.v1.UUID request_id = 1;
  repeated string peers = 2;
}

message PushPeerListResponse {}
